--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -14,5 +14,5 @@
 @import "./pages/home.scss";
 @import "./components/contact.scss";
 @import "./components/reservation.scss";
-
+@import "./components/footer.scss";
 
