--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "./components/menu/template.scss";
 @import "./components/menu/desserts.scss";
 @import "./components/menu/discovery.scss";
+@import "./components/menu/drinks.scss";
 @import "./pages/home.scss";
 @import "./components/contact.scss";
 @import "./components/reservation.scss";
